Fixed typo in About section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>
               I am a driven, detail-oriented professional specializing in web development, design, and digital illustration. Originally from Canada, I moved to Sendai, Japan in 2018 to teach English.
               My teaching experience allowed me to develop strong communication
-              skills in both English and Japanese. In 2022, I relocated to Tokyo pursue career opportunities
+              skills in both English and Japanese. In 2022, I relocated to Tokyo to pursue career opportunities
               in the education and tech industries.
             </p>
             <p>
