--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
               <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
               <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
               <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
+              <i class="devicon-postgresql-plain tooltipicon"></i><span class="tooltiptext">PostgreSQL</span>
             </div>
             <a target="_blank" href="https://sr-movie-list.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/rails-watch-list" class="card-btn">View Code</a>
