--- a/index.html
+++ b/index.html
@@ -43,28 +43,31 @@
     </div>
 
     <section id="about">
-      <div class="header">About Me</div>
-      <div class="container">
+      <div id="about-me">
+        <div class="container">
 
-        <div class="description row">
-          <div class="col-xl-3 col-lg-3 col-sm-12">
-            <img src="images/sarah.jpg" alt="Sarah Rollins" class="profile-image mb-4">
-          </div>
+          <div class="description row">
+            <div class="col-sm-12 col-lg-4 ">
+              <img src="images/sarah.png" alt="Sarah Rollins" class="profile-image mb-4">
+            </div>
 
-          <div class="col-xl-9 col-lg-9 col-sm-12">
-            <p>
-              I am a driven, detail-oriented professional specializing in web development, design, and digital illustration. Originally from Canada, I moved to Sendai, Japan in 2018 to teach English.
-              My teaching experience allowed me to develop strong communication
-              skills in both English and Japanese. In 2022, I relocated to Tokyo pursue career opportunities
-              in the education and tech industries.
-            </p>
-            <p>
-              I am a Le Wagon Tokyo Web Development graduate, and I am currently working as an IT Engineer.
-            </p>
+            <div class="col-sm-12 col-lg-8 pb-5">
+              <div class="header">About Me</div>
+              <p>
+                I am a driven, detail-oriented professional specializing in web development, design, and digital illustration. Originally from Canada, I moved to Sendai, Japan in 2018 to teach English.
+                My teaching experience allowed me to develop strong communication
+                skills in both English and Japanese. In 2022, I relocated to Tokyo pursue career opportunities
+                in the education and tech industries.
+              </p>
+              <p>
+                I am a Le Wagon Tokyo Web Development graduate, and I am currently working as an IT Solutions Engineer.
+              </p>
+            </div>
           </div>
         </div>
+      </div>
 
-        <div class="header-martp">Skills</div>
+      <div class="header-martp">Skills</div>
         <div class="row justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
           <div class="col-6 col-md-3">
             <i class="devicon-rails-plain code-icon"></i>
@@ -102,7 +105,6 @@
             <p>Git</p>
           </div>
         </div>
-
       </div>
     </section>
 
