Updated projects section

--- a/index.html
+++ b/index.html
@@ -166,6 +166,23 @@
           </div>
 
           <div data-aos="fade-up" class="project-card">
+            <img src="images/httpdog.png" width="320" height="150" alt="HTTPDog">
+            <h4 class="my-2">HTTPDog</h4>
+            <p>
+              HTTP Status Dogs API-based image search.
+            </p>
+            <div class="my-2 code-icon-sml">
+              <i class="devicon-react-plain tooltipicon"></i><span class="tooltiptext">React</span>
+              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
+              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
+              <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
+              <i class="devicon-typescript-plain tooltipicon"></i><span class="tooltiptext">TypeScript</span>
+            </div>
+            <a target="_blank" href="https://srollins01.github.io/http-dog/" class="card-btn">Live Version</a>
+            <a target="_blank" href="https://github.com/srollins01/http-dog/tree/master" class="card-btn">View Code</a>
+          </div>
+
+          <div data-aos="fade-up" class="project-card">
             <img src="images/japantrav.png" width="320" height="150" alt="Japan Travel">
             <h4 class="my-2">Japan Article</h4>
             <p>
@@ -178,20 +195,6 @@
             </div>
             <a target="_blank" href="https://srollins01.github.io/Japan-article/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/Japan-article" class="card-btn">View Code</a>
-          </div>
-
-          <div data-aos="fade-up" class="project-card">
-            <img src="images/profile.png" width="320" height="150" alt="Sarah Rollins Profile">
-            <h4 class="my-2">Profile Page</h4>
-            <p>
-              My personal profile page.
-            </p>
-            <div class="my-2 code-icon-sml">
-              <i class="devicon-html5-plain tooltipicon"></i><span class="tooltiptext">HTML</span>
-              <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
-            </div>
-            <a target="_blank" href="https://srollins01.github.io/profile/" class="card-btn">Live Version</a>
-            <a target="_blank" href="https://github.com/srollins01/profile" class="card-btn">View Code</a>
           </div>
 
           <div data-aos="fade-up" class="project-card">
