--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="Portfolio of Sarah Rollins, Full-Stack Web Developer"/>
-    <meta name="keywords" content="Sarah Rollins, Full Stack Developer, Ruby on Rails, HTML, CSS, React, JavaScript, Web Developer, Le Wagon, Tokyo"/>
+    <meta name="description" content="Sarah Rollins - Tokyo-based Full-Stack Web Developer specializing in Ruby on Rails and React."/>
+    <meta name="keywords" content="Sarah Rollins, Full Stack Developer, Web Developer, Tokyo, Ruby on Rails, HTML, CSS, React, JavaScript, TypeScript, PostgreSQL"/>
     <meta name="author" content="Sarah Rollins"/>
+    <title>Sarah Rollins - Full Stack Developer</title>
+
+    <meta property="og:title" content="Sarah Rollins - Full Stack Developer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sarah-rollins.me/">
+    <meta property="og:image" content="https://sarah-rollins.me/images/portfolio.png">
+    <meta property="og:description" content="Sarah Rollins - Tokyo-based Full-Stack Web Developer specializing in Ruby on Rails and React.">
+    <meta property="og:site_name" content="Sarah Rollins Portfolio">
+
     <link rel="icon" type="image/png" href="images/favicon-32x32.png"/>
-    <title>Sarah Rollins</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
