Removed hyphens from metadata descriptions for consistency

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="Sarah Rollins - Tokyo-based Full-Stack Web Developer specializing in Ruby on Rails and React."/>
+    <meta name="description" content="Sarah Rollins - Tokyo-based Full Stack Web Developer specializing in Ruby on Rails and React."/>
     <meta name="keywords" content="Sarah Rollins, Full Stack Developer, Web Developer, Tokyo, Ruby on Rails, HTML, CSS, React, JavaScript, TypeScript, PostgreSQL"/>
     <meta name="author" content="Sarah Rollins"/>
     <title>Sarah Rollins - Full Stack Developer</title>
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sarah-rollins.me/">
     <meta property="og:image" content="https://sarah-rollins.me/images/portfolio.png">
-    <meta property="og:description" content="Sarah Rollins - Tokyo-based Full-Stack Web Developer specializing in Ruby on Rails and React.">
+    <meta property="og:description" content="Sarah Rollins - Tokyo-based Full Stack Web Developer specializing in Ruby on Rails and React.">
     <meta property="og:site_name" content="Sarah Rollins Portfolio">
 
     <link rel="icon" type="image/png" href="images/favicon-32x32.png"/>
