Added scroll to top button

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
       </div>
     </div>
 
+    <button onclick="topFunction()" id="myBtn" class="myBtn" title="Go to top">
+      <i class="fa-solid fa-angle-up"></i>
+    </button>
+
     <section id="about">
       <div id="about-me">
         <div class="container">
