--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WQ73YHTYVM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WQ73YHTYVM');
+  </script>
+
   <body>
     <div>
       <div id="tsparticles"></div>
