--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
   </script>
 
   <body>
+    <div id="topnav" class="topnav">
+      <a href="#">
+        <img src="images/homeicon.png" height="40" width="40" alt="home icon"/>
+      </a>
+      <a target="_blank" href="https://github.com/srollins01">
+        <i class="fa-brands fa-square-github"></i>
+      </a>
+      <a target="_blank" href="https://www.linkedin.com/in/sarah-rollins-sr/">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a target="_blank" href="mailto:s.rollins751@gmail.com">
+        <i class="fa-solid fa-envelope"></i>
+      </a>
+    </div>
+
     <div>
       <div id="tsparticles"></div>
       <div class="banner-wrap">
