--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-    <button onclick="topFunction()" id="myBtn" class="myBtn" title="Go to top">
+    <button id="myBtn" class="myBtn" title="Go to top">
       <i class="fa-solid fa-angle-up"></i>
     </button>
 
@@ -106,44 +106,90 @@
       </div>
 
       <div class="header-martp">Skills</div>
-        <div class="row justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
+
+        <div class="row purple-v-light justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
           <div class="col-6 col-md-3">
             <i class="devicon-rails-plain code-icon"></i>
             <p>Ruby on Rails</p>
           </div>
           <div class="col-6 col-md-3">
-            <i class="devicon-html5-plain code-icon"></i>
-            <p>HTML</p>
-          </div>
-          <div class="col-6 col-md-3">
-            <i class="devicon-css3-plain code-icon"></i>
-            <p>CSS</p>
-          </div>
-          <div class="col-6 col-md-3">
             <i class="devicon-javascript-plain code-icon"></i>
             <p>JavaScript</p>
-          </div>
-        </div>
-
-        <div class="row justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
-          <div class="col-6 col-md-3">
-            <i class="devicon-react-plain code-icon"></i>
-            <p class="text-center">React</p>
           </div>
           <div class="col-6 col-md-3">
             <i class="devicon-typescript-original code-icon"></i>
             <p>TypeScript</p>
           </div>
           <div class="col-6 col-md-3">
+            <i class="devicon-react-plain code-icon"></i>
+            <p>React</p>
+          </div>
+        </div>
+
+        <div class="row purple-light justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
+          <div class="col-6 col-md-3">
+            <i class="devicon-nextjs-plain code-icon"></i>
+            <p>Next.js</p>
+          </div>
+          <div class="col-6 col-md-3">
+            <i class="devicon-nodejs-plain-wordmark code-icon"></i>
+            <p>Node.js</p>
+          </div>
+          <div class="col-6 col-md-3">
             <i class="devicon-postgresql-plain code-icon"></i>
             <p>PostgreSQL</p>
           </div>
           <div class="col-6 col-md-3">
-            <i class="devicon-git-plain code-icon"></i>
-            <p>Git</p>
+            <i class="devicon-heroku-original code-icon"></i>
+            <p>Heroku</p>
           </div>
         </div>
+
+        <span id="more-skills">
+          <div class="row purple-dark justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
+            <div class="col-6 col-md-3">
+              <i class="devicon-docker-plain code-icon"></i>
+              <p>Docker</p>
+            </div>
+            <div class="col-6 col-md-3">
+              <i class="devicon-amazonwebservices-plain code-icon"></i>
+              <p>AWS</p>
+            </div>
+            <div class="col-6 col-md-3">
+              <i class="devicon-git-plain code-icon"></i>
+              <p>Git</p>
+            </div>
+            <div class="col-6 col-md-3">
+              <i class="devicon-tailwindcss-original code-icon"></i>
+              <p>Tailwind</p>
+            </div>
+          </div>
+
+          <div class="row purple-v-dark justify-content-center text-center mx-lg-5 px-lg-5 mx-md-2 px-md-2 py-2">
+            <div class="col-6 col-md-3">
+              <i class="devicon-bootstrap-plain code-icon"></i>
+              <p>Bootstrap</p>
+            </div>
+            <div class="col-6 col-md-3">
+              <i class="devicon-figma-plain code-icon"></i>
+              <p>Figma</p>
+            </div>
+            <div class="col-6 col-md-3">
+              <i class="devicon-html5-plain code-icon"></i>
+              <p>HTML</p>
+            </div>
+            <div class="col-6 col-md-3">
+              <i class="devicon-css3-plain code-icon"></i>
+              <p>CSS</p>
+            </div>
+          </div>
+        </span>
       </div>
+
+      <div class="row justify-content-center mt-3">
+        <a id="show-btn">Show more</a>
+      </div>
+
     </section>
 
     <section id="projects">
@@ -163,6 +209,8 @@
               <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
               <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
               <i class="devicon-postgresql-plain tooltipicon"></i><span class="tooltiptext">PostgreSQL</span>
+              <i class="devicon-heroku-original tooltipicon"></i><span class="tooltiptext">Heroku</span>
+
             </div>
             <a target="_blank" href="https://yasashii-care-d8c3a285aefa.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/yasashii" class="card-btn">View Code</a>
@@ -180,6 +228,7 @@
               <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
               <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
               <i class="devicon-postgresql-plain tooltipicon"></i><span class="tooltiptext">PostgreSQL</span>
+              <i class="devicon-heroku-original tooltipicon"></i><span class="tooltiptext">Heroku</span>
             </div>
             <a target="_blank" href="https://characatch-app-08438e6cbd51.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/characatch" class="card-btn">View Code</a>
@@ -197,6 +246,7 @@
               <i class="devicon-css3-plain tooltipicon"></i><span class="tooltiptext">CSS</span>
               <i class="devicon-javascript-plain tooltipicon"></i><span class="tooltiptext">JavaScript</span>
               <i class="devicon-postgresql-plain tooltipicon"></i><span class="tooltiptext">PostgreSQL</span>
+              <i class="devicon-heroku-original tooltipicon"></i><span class="tooltiptext">Heroku</span>
             </div>
             <a target="_blank" href="https://sr-movie-list.herokuapp.com/" class="card-btn">Live Version</a>
             <a target="_blank" href="https://github.com/srollins01/rails-watch-list" class="card-btn">View Code</a>
